# BayesClassifier

./: .gitignore  Cargo.toml  README.md
content/: neutral_text.txt
src/: classify.rs  main.rs  train.rs  utils.rs
