[package]
name = "bayes-classifier-in-rust"
version = "0.1.0"
authors = ["Tux <user@anonymous.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
regex = "1"
lazy_static = "1.2.0"
[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3